--- a/css/our story.css
+++ b/css/our story.css
@@ -21,14 +21,6 @@ header .fond img {
   margin-top: 90px;
 }
 
-header .fond h1 {
-  margin-top: -133px;
-  color: white;
-  font-family: 'Poppins', sans-serif;
-  font-size: 40px;
-  margin-left: 65px;
-}
-
 header .navlist {
   position: absolute;
   top: 0;
@@ -95,13 +87,15 @@ header .navlist .icon a {
   font-size: 20px;
 }
 
-.container .contend {
-  margin-top: 118px;
-  margin-left: 65px;
-}
-
-.container .contend p {
+header .container {
   font-family: 'Poppins', sans-serif;
-  font-size: 15px;
+  margin-top: 50px;
+  margin-left: 100px;
+  font-size: 16px;
 }
 
+header .container p {
+  margin-top: 10px;
+  line-height: 45px;
+  font-weight: 600;
+}
