--- a/css/login.css
+++ b/css/login.css
@@ -40,7 +40,7 @@ header .navlist .logo h1 {
   font-size: 44px;
   color: black;
   margin-left: 500px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 header .navlist .logo h1 span {
@@ -147,8 +147,12 @@ header .navlist .icon a {
     cursor: pointer;
     background-color: black ;
     font-size: 16px;
+    transition: transform 0.5s ease;
 }
 
+.login .pass-btn button:hover {
+  transform: scale(1.05);
+}
 .login .account {
   margin-top: 20px;
   display: flex;
@@ -165,4 +169,90 @@ header .navlist .icon a {
 
 .login .account a:hover  {
   font-weight: 500;
+}
+
+.footer {
+  display: flex;
+  height: 44vh;
+  background-color: black;
+  margin-top: 100px;
+}
+
+.footer .footer-img li{
+  display: flex;
+  text-align: center;
+  align-items: center;
+}
+
+.footer .icons-app {
+ margin-left: 500px;
+ margin-top: 40px;
+}
+
+.footer .icons-app a {
+  padding-left: 50px;
+  color: white;
+  font-size: 34px;
+}
+
+.footer img {
+  height: 35px;
+  margin-top: 50px;
+  margin-left: 200px;
+}
+
+.footer hr {
+  margin-top: 50px;
+  margin-left: 200px;
+}
+
+.footer .li-twoo li{
+  justify-content: center;
+  margin-top: 50px;
+  margin-left: 120px;
+}
+
+.footer .li-twoo a {
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  padding-left: 65px;
+}
+
+.footer .footer-suite {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-left: 200px;
+}
+
+.footer .footer-suite p  {
+  color: white;
+  font-family: 'Poppins';
+}
+
+.footer .footer-suite img {
+  margin-top: 10px;
+  margin-left: 200px;
+  height: 55px;
+}
+
+.footer .pays {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  height:38px ;
+  margin-left: 130px;
+}
+
+.footer .pays select {
+  width: 450px;
+  font-size: 16px;
+  background-color: #f9f9f9; /* Couleur de fond */
+  color: #333; /* Couleur du texte */
+  border: 1px solid #ccc; /* Bordure */
+  border-radius: 4px; /* Coins arrondis */
+ outline: none;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 5"><path fill="#333" d="M2 0L0 2h4z"/></svg>'); /* Icône de la flèche */
+
+  
 }
