--- a/css/clubs.css
+++ b/css/clubs.css
@@ -176,8 +176,7 @@ header .contend .second {
 .footer {
   display: flex;
   justify-content: center;
-  
-  height: 100vh;
+  height: 75vh;
   background-color: black;
   color: white;
 }
@@ -207,9 +206,19 @@ header .contend .second {
 .footer .contact .second {
   color: white;
 }
+
+.footer .contact .text {
+  text-align: center;
+}
+
+.footer .formulaire .second {
+  font-size: 12px;
+  margin-left: 45px;
+}
+
 form {
-  width: 15%;
-  margin-left: 35px;
+  width: 14%;
+  margin-left: 55px;
   margin-top: -35px;
 }
 
@@ -226,10 +235,97 @@ form input
 form button{
   background-color: white;
   border: none;
-  padding: 13px 70px;
-  font-size: 20px;
-  border-radius: 10px 20px; 
+  padding: 12px 50px;
+  font-size: 19px;
+  border-radius: 5px 12px 12px; 
   cursor: pointer;
+  margin-left: 190px;
+  margin-top: -30px;
+}
+
+.info {
+  background-color: black;
+  display: flex;
+  height: 45vh;
+}
+
+.info .footer-img li{
+  display: flex;
+  text-align: center;
+  align-items: center;
+}
+
+.info .icons-app {
+  margin-left: 500px;
+  margin-top: 40px;
+}
+
+.info .icons-app a {
+  padding-left: 50px;
+  color: white;
+  font-size: 34px;
+}
+
+.info img {
+  height: 35px;
+  margin-top: 50px;
   margin-left: 200px;
+}
+
+.info hr {
+  margin-top: 50px;
+  margin-left: 200px;
+}
+
+.info .li-twoo li{
+  justify-content: center;
+  margin-top: 50px;
+  margin-left: 120px;
+}
+
+.info .li-twoo a {
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  padding-left: 65px;
+}
+
+
+
+.info .footer-suite {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-left: 200px;
+}
+
+.info .footer-suite p  {
+  color: white;
+  font-family: 'Poppins';
+}
+
+.info .footer-suite img {
+  margin-top: 10px;
+  margin-left: 220px;
+  height: 50px;
+}
+
+.info .pays {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  height:38px ;
+  margin-left: 130px;
+}
+
+.info .pays select {
+  width: 450px;
+  font-size: 16px;
+  background-color: #f9f9f9; /* Couleur de fond */
+  color: #333; /* Couleur du texte */
+  border: 1px solid #ccc; /* Bordure */
+  border-radius: 4px; /* Coins arrondis */
+ outline: none;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 5"><path fill="#333" d="M2 0L0 2h4z"/></svg>'); /* Icône de la flèche */
+
   
 }
