--- a/css/shop all.css
+++ b/css/shop all.css
@@ -150,7 +150,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('/bar.png') no-repeat center / contain;
+  background: url('bar.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
@@ -317,7 +317,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('/bar.png') no-repeat center / contain;
+  background: url('bar.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
@@ -482,7 +482,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('/bar.png') no-repeat center / contain;
+  background: url('bar.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
@@ -643,7 +643,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('/bar.png') no-repeat center / contain;
+  background: url('bar.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
