--- a/css/shop all.css
+++ b/css/shop all.css
@@ -111,13 +111,12 @@ header .navlist .icon a {
 }
 
 .card {
-  width: 300px; /* Ajustez la largeur si nécessaire */
-  margin-right: -50px; /* Ajustez la marge droite si nécessaire */
+  margin-right: 130px;  
 }
 
 .container_card {
   font-family: 'Poppins';
-  margin-left: 100px;
+  margin-left: 120px;
   margin-top: 50px;
 }
 
@@ -131,510 +130,17 @@ header .navlist .icon a {
   font-family: 'Poppins';
 }
 
-.card .img-container1 {
-  position: relative;
-  overflow: hidden;
-  height: 390px;
-  width: 300px;
-}
-
-.card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.card .img-container1::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  height: 100%;
-  width: 100%;
-  background: url('bar.png') no-repeat center / contain;
-  opacity: 0;
-  scale: 0.9;
-  transition: all 0.7s ease-out;
-}
-
-.card:hover .img-container1::before {
-  opacity: 1;
-  scale: 1.1;
-}
-
-.actions .favorite {
-  position: absolute;
-  top: 20px;
-  right: -100px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  color: #fff;
-  background-color: #9a50cc4f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-}
-
-.actions .favorite:hover {
-  background-color: #9a50ccb4;
-}
-
-.card:hover .actions .favorite {
-  right: 10px;
-}
-
-.card > * {
-  margin: 10px 0 10px;
-}
-
-.card p {
-  font-size: 12px;
-  font-weight: 500;
-  margin-left: -20px;
-  margin-top: 25px;
-}
-
-.flip-container .flip-box-front {
-  font-size: 20px;
-  color: #000;
-}
-
-.flip-box-front ins {
-  text-decoration: none;
-  margin-top: -40px;
-}
-
-.flip-box-front ins p {
-  font-size: 15px;
-}
-
-.flip-container {
-  perspective: 1000px;
-}
-
-.flip-box {
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 0.6s;
-  padding-bottom: 30px;
-}
-
-.flip-box-front,
-.flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  color: #000;
-}
-
-.flip-box-front {
-  transform: rotateX(0deg);
-}
-
-.flip-box-back {
-  transform: rotateX(-180deg);
-}
-
-.flip-box-back button {
-  position: relative;
-  font-size: 20px;
-  font-weight: 500;
-  color: #9b50cc;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  background-color: transparent;
-}
-
-.flip-box-back button::before {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 0%;
-  height: 1px;
-  visibility: hidden;
-  background-color: #9b50cc;
-  transition: all 0.3s ease;
-}
-
-.flip-box-back:hover button::before {
-  visibility: visible;
-  width: 100%;
-}
-
-.card:hover .flip-box {
-  transform: rotateX(180deg);
-}
-
-.flip-box-back .prix {
-  display: flex;
-  margin-top: -25px;
-  margin-left: -20px;
-}
-
-.flip-box-back .prix p {
-  padding: 20px;
-}
-
-.flip-box-back .prix .priz {
-  color: grey;
-  font-size: 13px;
-}
-
-
-.container2 {
-  display: flex;
-  align-items: center;
-  font-family: 'Poppins';
-}
-
-.card {
-  width: 500px;
-}
-
-.card .img-container2 {
-  position: relative;
-  overflow: hidden;
-  height: 390px;
-  width: 300px;
-}
-
-.card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.card .img-container2::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  height: 100%;
-  width: 100%;
-  background: url('bar.png') no-repeat center / contain;
-  opacity: 0;
-  scale: 0.9;
-  transition: all 0.7s ease-out;
-}
-
-.card:hover .img-container2::before {
-  opacity: 1;
-  scale: 1.1;
-}
-
-.actions .favorite {
-  position: absolute;
-  top: 20px;
-  right: -100px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  color: #fff;
-  background-color: #9a50cc4f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-}
-
-.actions .favorite:hover {
-  background-color: #9a50ccb4;
-}
-
-.card:hover .actions .favorite {
-  right: 10px;
-}
-
-.card > * {
-  margin: 10px 0 10px;
-}
-
-.card p {
-  font-size: 12px;
-  font-weight: 500;
-  margin-left: -20px;
-  margin-top: 25px;
-}
-
-.flip-container .flip-box-front {
-  font-size: 20px;
-  color: #000;
-}
-
-.flip-box-front ins {
-  text-decoration: none;
-  margin-top: -40px;
-}
-
-.flip-box-front ins p {
-  font-size: 15px;
-}
-
-.flip-container {
-  perspective: 1000px;
-}
-
-.flip-box {
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 0.6s;
-  padding-bottom: 30px;
-}
-
-.flip-box-front,
-.flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  color: #000;
-}
-
-.flip-box-front {
-  transform: rotateX(0deg);
-}
-
-.flip-box-back {
-  transform: rotateX(-180deg);
-}
-
-.flip-box-back button {
-  position: relative;
-  font-size: 20px;
-  font-weight: 500;
-  color: #9b50cc;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  background-color: transparent;
-}
-
-.flip-box-back button::before {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 0%;
-  height: 1px;
-  visibility: hidden;
-  background-color: #9b50cc;
-  transition: all 0.3s ease;
-}
-
-.flip-box-back:hover button::before {
-  visibility: visible;
-  width: 100%;
-}
-
-.card:hover .flip-box {
-  transform: rotateX(180deg);
-}
-
-.flip-box-back .prix {
-  display: flex;
-  margin-top: -25px;
-  margin-left: -20px;
-}
-
-.flip-box-back .prix p {
-  padding: 20px;
-}
-
-.flip-box-back .prix .priz {
-  color: grey;
-  font-size: 13px;
-}
-
-
-.container3 {
-  display: flex;
-  align-items: center;
-  font-family: 'Poppins';
-}
-
-
-
-.card .img-container3 {
-  position: relative;
-  overflow: hidden;
-  width: 300PX;
-  height: 390PX;
-}
-
-.card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.card .img-container3::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  height: 100%;
-  width: 100%;
-  background: url('bar.png') no-repeat center / contain;
-  opacity: 0;
-  scale: 0.9;
-  transition: all 0.7s ease-out;
-}
-
-.card:hover .img-container3::before {
-  opacity: 1;
-  scale: 1.1;
-}
-
-.actions .favorite {
-  position: absolute;
-  top: 20px;
-  right: -100px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  color: #fff;
-  background-color: #9a50cc4f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-}
-
-.actions .favorite:hover {
-  background-color: #9a50ccb4;
-}
-
-.card:hover .actions .favorite {
-  right: 10px;
-}
-
-
-.card p {
-  font-size: 12px;
-  font-weight: 500;
-  margin-left: -20px;
-  margin-top: 25px;
-}
-
-.flip-container .flip-box-front {
-  font-size: 20px;
-  color: #000;
-}
-
-.flip-box-front ins {
-  text-decoration: none;
-  margin-top: -40px;
-}
-
-.flip-box-front ins p {
-  font-size: 15px;
-}
-
-.flip-container {
-  perspective: 1000px;
-}
-
-.flip-box {
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 0.6s;
-  padding-bottom: 30px;
-}
-
-.flip-box-front,
-.flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  color: #000;
-}
-
-.flip-box-front {
-  transform: rotateX(0deg);
-}
-
-.flip-box-back {
-  transform: rotateX(-180deg);
-}
-
-.flip-box-back button {
-  position: relative;
-  font-size: 20px;
-  font-weight: 500;
-  color: #9b50cc;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  background-color: transparent;
-}
-
-.flip-box-back button::before {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 0%;
-  height: 1px;
-  visibility: hidden;
-  background-color: #9b50cc;
-  transition: all 0.3s ease;
-}
-
-.flip-box-back:hover button::before {
-  visibility: visible;
-  width: 100%;
-}
-
-.card:hover .flip-box {
-  transform: rotateX(180deg);
-}
-
-.flip-box-back .prix {
-  display: flex;
-  margin-top: -25px;
-  margin-left: -20px;
-}
-
-.flip-box-back .prix p {
-  padding: 20px;
-}
-
-.flip-box-back .prix .priz {
-  color: grey;
-  font-size: 13px;
-}
-
-
-.container4 {
-  display: flex;
-  align-items: center;
-  font-family: 'Poppins';
-}
-
 .card .img-container {
   position: relative;
   overflow: hidden;
   height: 390px;
-  width: 305px;
+  width: 320px;
 }
 
 .card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
 }
 
 .card .img-container::before {
