--- a/css/shop all.css
+++ b/css/shop all.css
@@ -244,6 +244,10 @@ header .navlist .icon a {
 .card:hover .flip-box {
   transform: rotateX(180deg);
 }
+.card2:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
 
 .flip-box-back .prix {
   display: flex;
@@ -321,5 +325,272 @@ header .navlist .icon a {
 
 .card4:hover .flip-box {
   transform: rotateX(180deg);
+}
+
+.contend2 {
+  margin-top: 50px;
+  display: flex;
+  gap: 130px;
+}
+
+.contend2 .img-container2 {
+  position: relative;
+  overflow: hidden;
+  height: 370px;
+  width: 300px;
+}
+
+.contend2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card5 .img-container2::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  background: url('bar.png') no-repeat center / contain;
+  opacity: 0;
+  scale: 0.9;
+  transition: all 0.7s ease-out;
+}
+
+.card5 :hover .img-container2::before {
+  opacity: 1;
+  scale: 1.1;
+}
+
+.card6 .img-container2::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  background: url('bar.png') no-repeat center / contain;
+  opacity: 0;
+  scale: 0.9;
+  transition: all 0.7s ease-out;
+}
+
+.card6 :hover .img-container2::before {
+  opacity: 1;
+  scale: 1.1;
+}
+
+.card6:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
+.card7 .img-container2::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  background: url('bar.png') no-repeat center / contain;
+  opacity: 0;
+  scale: 0.9;
+  transition: all 0.7s ease-out;
+}
+
+.card7 :hover .img-container2::before {
+  opacity: 1;
+  scale: 1.1;
+}
+
+.card7:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
+.card8 .img-container2::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  background: url('bar.png') no-repeat center / contain;
+  opacity: 0;
+  scale: 0.9;
+  transition: all 0.7s ease-out;
+}
+
+.card8 :hover .img-container2::before {
+  opacity: 1;
+  scale: 1.1;
+}
+
+.card8:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
+.card9 .img-container2::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  background: url('bar.png') no-repeat center / contain;
+  opacity: 0;
+  scale: 0.9;
+  transition: all 0.7s ease-out;
+}
+
+.card9 :hover .img-container2::before {
+  opacity: 1;
+  scale: 1.1;
+}
+
+.card9:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
+
+.card10 .img-container2::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  background: url('bar.png') no-repeat center / contain;
+  opacity: 0;
+  scale: 0.9;
+  transition: all 0.7s ease-out;
+}
+
+.card10 :hover .img-container2::before {
+  opacity: 1;
+  scale: 1.1;
+}
+
+.card10:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
+.card11 .img-container2::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  background: url('bar.png') no-repeat center / contain;
+  opacity: 0;
+  scale: 0.9;
+  transition: all 0.7s ease-out;
+}
+
+.card11 :hover .img-container2::before {
+  opacity: 1;
+  scale: 1.1;
+}
+
+.card11:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
+.contend2 .actions .favorite {
+  position: absolute;
+  top: 20px;
+  right: -100px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #9a50cc4f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+}
+
+.contend2 .actions .favorite:hover {
+  background-color: #9a50ccb4;
+}
+
+.contend2:hover .actions .favorite {
+  right: 10px;
+}
+
+.contend2 > * {
+  margin: 10px 0 10px;
+}
+
+.contend2 p {
+  font-size: 12px;
+  font-weight: 500;
+  margin-left: -20px;
+  margin-top: 25px;
+}
+
+.contend2 .flip-container .flip-box-front {
+  font-size: 20px;
+  color: #000;
+}
+
+.contend2 .flip-box-front ins {
+  text-decoration: none;
+  margin-top: -40px;
+}
+
+.contend2 .flip-box-front ins p {
+  font-size: 15px;
+}
+
+.contend2 .flip-container {
+  perspective: 1000px;
+}
+
+.contend2 .flip-box {
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+  padding-bottom: 30px;
+}
+
+.contend2 .flip-box-front,
+.contend2 .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: #000;
+}
+
+
+.contend2 .flip-box-front {
+  transform: rotateX(0deg);
+}
+
+.contend2 .flip-box-back {
+  transform: rotateX(-180deg);
+}
+
+
+.contend2 .card:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
+.contend2 .card5:hover .flip-box {
+  transform: rotateX(180deg);
+}
+
+.contend2 .flip-box-back .prix {
+  display: flex;
+  margin-top: -25px;
+  margin-left: -20px;
+}
+
+.contend2 .flip-box-back .prix p {
+  padding: 20px;
+}
+
+.contend2 .flip-box-back .prix .priz {
+  color: grey;
+  font-size: 13px;
 }
 
