--- a/css/shop all.css
+++ b/css/shop all.css
@@ -114,7 +114,7 @@ header .navlist .icon a {
 .container_card {
   font-family: 'Poppins';
   margin-left: 150px;
-  margin-top: 50px;
+  margin-top: 70px;
   height: 100vh;
 }
 
@@ -594,3 +594,89 @@ header .navlist .icon a {
   font-size: 13px;
 }
 
+.footer {
+  display: flex;
+  background-color: black;
+  margin-top: 530px;
+  height: 44vh;
+  align-items: center;
+}
+
+.footer .footer-img li{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  padding-left: 35px;
+}
+
+.footer .icons-app {
+ margin-left: 500px;
+ margin-top: 40px;
+}
+
+.footer .icons-app a {
+  padding-left: 50px;
+  color: white;
+  font-size: 28px;
+}
+
+.footer img {
+  height: 35px;
+  margin-top: 50px;
+  margin-left: 200px;
+}
+
+.footer hr {
+  margin-top: 50px;
+  margin-left: 200px;
+}
+
+.footer .li-twoo li{
+  justify-content: center;
+  margin-top: 50px;
+  margin-left: 120px;
+}
+
+.footer .li-twoo a {
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  padding-left: 65px;
+}
+
+.footer .footer-suite {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-left: 200px;
+}
+
+.footer .footer-suite p  {
+  color: white;
+  font-family: 'Poppins';
+  margin-left: 30px;
+}
+
+.footer .footer-suite img {
+  margin-top: 10px;
+  margin-left: 250px;
+  height: 45px;
+}
+
+.footer .pays {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  height:38px ;
+  margin-left: 200px;
+}
+
+.footer .pays select {
+  width: 450px;
+  font-size: 16px;
+  background-color: #f9f9f9; /* Couleur de fond */
+  color: #333; /* Couleur du texte */
+  border: 1px solid #ccc; /* Bordure */
+  border-radius: 4px; /* Coins arrondis */
+ outline: none;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 5"><path fill="#333" d="M2 0L0 2h4z"/></svg>'); /* Icône de la flèche */  
+}
