--- a/css/shop all.css
+++ b/css/shop all.css
@@ -352,7 +352,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('bar.png') no-repeat center / contain;
+  background: url('bar vert.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
@@ -369,7 +369,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('bar.png') no-repeat center / contain;
+  background: url('bar vert.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
@@ -390,7 +390,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('bar.png') no-repeat center / contain;
+  background: url('bar vert.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
@@ -432,7 +432,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('bar.png') no-repeat center / contain;
+  background: url('bar vert.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
@@ -454,7 +454,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('bar.png') no-repeat center / contain;
+  background: url('bar vert.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
@@ -475,7 +475,7 @@ header .navlist .icon a {
   inset: 0;
   height: 100%;
   width: 100%;
-  background: url('bar.png') no-repeat center / contain;
+  background: url('bar vert.png') no-repeat center / contain;
   opacity: 0;
   scale: 0.9;
   transition: all 0.7s ease-out;
